fix: Correct stylesheet path in cart.html and adjust flex alignment in main.scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -425,7 +425,6 @@ body{
                             .add-to-cart{
                                 width: 100%;
                                 display: flex;
-                                justify-content: right;
                                 svg{
                                     height: 10%;
                                     &:hover{
